--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,7 +1,25 @@
+h1{
+    background-color: #2980b9;
+    color: white;
+    margin: 0;
+    padding: 10px 20px;
+    font-size: 24px; 
+    text-transform: uppercase;
+    font-weight: normal;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family: Roboto;
+}
 #container{
-    border: 2px solid gray;
+    box-shadow: 0 0 3px rgba(0,0,0, .1);
     width: 360px;
-    margin: 0 auto;
+    margin: 100px auto;
+    background-color: #f7f7f7;
 }
 
 .completed{
