--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -15,6 +15,27 @@ ul {
 body{
     font-family: Roboto;
 }
+li{
+    background-color: white;
+    height: 40px;
+    line-height: 40px;
+}
+li:nth-child(2n){
+background-color: #f7f7f7;
+}
+input{
+    font-size: 18px;
+    background-color: #f7f7f7;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    color: #2980b9;
+}
+input:focus{
+    background-color: white;
+    border: 3px solid #2980b9;
+    outline: none;
+}
 #container{
     box-shadow: 0 0 3px rgba(0,0,0, .1);
     width: 360px;
