--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -7,11 +7,13 @@ h1{
     text-transform: uppercase;
     font-weight: normal;
 }
+
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
+
 body{
     font-family: Roboto;
     background: #FC5C7D;  /* fallback for old browsers */
@@ -20,14 +22,34 @@ body{
 
 
 }
+
 li{
     background-color: white;
     height: 40px;
     line-height: 40px;
 }
+
 li:nth-child(2n){
 background-color: #f7f7f7;
 }
+
+span{
+    background-color: #e74C3c;
+    height: 40px;
+    margin-right: 20px;
+    text-align: center;
+    color:white;
+    display: inline-block;
+    width: 0;
+    transition: 0.2s linear;
+    opacity: 0;
+}
+
+li:hover span{
+    width: 40px;
+    opacity: 1.0;
+}
+
 input{
     font-size: 18px;
     background-color: #f7f7f7;
@@ -35,15 +57,19 @@ input{
     width: 100%;
     padding: 13px 13px 13px 20px;
     color: #2980b9;
+    border: 3px rgba(0,0,0,0);
 }
+
 input:focus{
     background-color: white;
     border: 3px solid #2980b9;
     outline: none;
 }
+
 .fa-pencil-alt{
     float: right;
 }
+
 #container{
     box-shadow: 0 0 3px rgba(0,0,0, .1);
     width: 360px;
